Bug 79315 - FILESAVE: DOCX: wrong position for rotated pictures
Summary: FILESAVE: DOCX: wrong position for rotated pictures
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: [REDACTED]
URL:
Whiteboard: target:6.1.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Images
  Show dependency treegraph
 
Reported: 2014-05-27 14:28 UTC by Jacobo Aragunde Pérez
Modified: 2018-06-13 14:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Test case (269.76 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-27 14:28 UTC, Jacobo Aragunde Pérez
Details
Comparison, original left, roudtripped right (547.75 KB, image/png)
2014-05-29 15:28 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jacobo Aragunde Pérez 2014-05-27 14:28:53 UTC
Created attachment 99950 [details]
Test case

Steps to reproduce:

1. Open attached test case.
2. Save as .docx.
3. Open again with Word.

The exported document will place the picture in a slightly different position.

Related to bug #70838.
Comment 1 Jorendc 2014-05-29 15:27:37 UTC
Repro, tested using windows 8.1 with LibreOffice Version: 4.4.0.0.alpha0+
Build ID: a35d92197d850527bd294eb6197b5bf83109d5be
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-29_10:21:12

Also the image is not completely visible anymore (see attached comparison screenshot).

Kind regards,
Joren
Comment 2 Jorendc 2014-05-29 15:28:06 UTC
Created attachment 100115 [details]
Comparison, original left, roudtripped right
Comment 3 QA Administrators 2015-06-08 14:41:40 UTC Comment hidden (obsolete)
Comment 4 Jacobo Aragunde Pérez 2015-06-08 16:43:29 UTC
Now the behavior is different: the exported file cannot be opened with Word 2010. A "damaged file" dialog appears.

Now the bug causes loss of data and is always reproducible, so I'm rising the priority.

Tested in Linux with LibreOffice Version: 5.0.0.0.alpha1+
Build ID: bbdd739d6e2024f57e692e646295644faf44af22
Comment 5 Robinson Tryon (qubit) 2015-10-07 22:22:56 UTC
Dropping Severity -> critical (we've deprecated the 'blocker' value)
https://wiki.documentfoundation.org/QA/Bugzilla/Fields/Severity#Severity_Levels
Comment 6 QA Administrators 2016-11-08 11:05:14 UTC Comment hidden (obsolete)
Comment 7 Jacobo Aragunde Pérez 2016-11-08 12:12:45 UTC
Now the bug behaves like originally reported, there is no data loss. See attachment 100115 [details].

Version: 5.1.6.2.0+
Build ID: 5.1.6.2-1.fc24
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 8 [REDACTED] 2018-04-22 22:21:37 UTC
It looks like this issue is caused by invalid value of wp:effectExtent attribute.
Comment 9 [REDACTED] 2018-05-01 08:54:12 UTC
See also: https://gerrit.libreoffice.org/#/c/53679/
Comment 10 Commit Notification 2018-05-10 12:15:01 UTC
Victor Mireyev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9992338fbbf46bf381501df6c7763bf117d2ee25

tdf#79315 Fix wp:effectExtent issue when exporting inline picture to DOCX.

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.