fdo#79315 Fix wp:effectExtent issue when exporting inline picture to DOCX.

Change-Id: I21a24da388f153a4ffbb8dc770c1a32f34924f46